--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "expect",
   "version": "0.1.0",
-  "description": "Expect-style assertions for node",
+  "description": "Write better assertions",
   "main": "expect.js",
   "directories": {
     "test": "test"
