--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
   "version": "0.1.0",
   "description": "Write better assertions",
   "main": "expect.js",
-  "directories": {
-    "test": "test"
-  },
   "dependencies": {},
   "devDependencies": {
     "mocha": "~1.17.1"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha spec"
   },
   "keywords": [
     "expect",
