--- a/package.json
+++ b/package.json
@@ -6,10 +6,19 @@
   "dependencies": {},
   "devDependencies": {
     "jshint": "^2.5.10",
-    "mocha": "^2.0.1"
+    "karma": "^0.12.28",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-cli": "0.0.4",
+    "karma-mocha": "^0.1.10",
+    "karma-sourcemap-loader": "^0.3.2",
+    "karma-webpack": "^1.3.1",
+    "mocha": "^2.0.1",
+    "webpack": "^1.4.13",
+    "webpack-dev-server": "^1.6.6"
   },
   "scripts": {
-    "test": "jshint . && mocha \"modules/**/__tests__/**/*-test.js\""
+    "test": "jshint . && mocha modules/**/__tests__/*-test.js",
+    "test-browser": "karma start"
   },
   "keywords": [
     "expect",
