--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "karma-sourcemap-loader": "^0.3.2",
     "karma-webpack": "^1.3.1",
     "mocha": "^2.0.1",
-    "webpack": "^1.4.13",
-    "webpack-dev-server": "^1.6.6"
+    "webpack": "^1.4.13"
   },
   "scripts": {
     "test": "jshint . && mocha modules/**/__tests__/*-test.js",
