Fix test glob pattern

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "dist": "webpack modules/expect.js dist/expect.min.js",
-    "test": "jshint . && mocha modules/**/__tests__/*-test.js",
+    "test": "jshint . && mocha --reporter spec 'modules/**/__tests__/*-test.js'",
     "test-browser": "karma start"
   },
   "keywords": [
