--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.6.0",
   "description": "Write better assertions",
   "main": "modules/index.js",
-  "dependencies": {},
+  "dependencies": {
+    "assert": "^1.3.0"
+  },
   "devDependencies": {
     "jshint": "^2.5.10",
     "karma": "^0.12.28",
