--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Write better assertions",
   "main": "modules/index.js",
   "dependencies": {
-    "assert": "^1.3.0"
+    "assert": "^1.3.0",
+    "object-inspect": "^1.0.2"
   },
   "devDependencies": {
     "jshint": "^2.5.10",
