--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Write better assertions",
   "main": "modules/index.js",
   "dependencies": {
-    "assert": "^1.3.0",
-    "invariant": "^2.1.0",
+    "deep-equal": "^1.0.1",
     "is-regexp": "^1.0.0",
     "object-inspect": "^1.0.2"
   },
