--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "expect",
   "version": "1.9.0",
   "description": "Write better assertions",
-  "main": "modules/index.js",
+  "main": "lib/index",
   "dependencies": {
     "deep-equal": "^1.0.1",
     "is-regexp": "^1.0.0",
     "object-inspect": "^1.0.2"
   },
   "devDependencies": {
+    "babel": "^5.4.7",
+    "babel-core": "^5.4.7",
+    "babel-loader": "^5.3.2",
     "jshint": "^2.5.10",
     "karma": "^0.12.28",
     "karma-chrome-launcher": "^0.1.7",
@@ -20,7 +23,9 @@
     "webpack": "^1.4.13"
   },
   "scripts": {
-    "dist": "webpack -p modules/index.js dist/expect.min.js",
+    "build": "babel ./modules -d lib --ignore '__tests__'",
+    "build-umd": "NODE_ENV=production webpack modules/index.js umd/expect.js",
+    "build-min": "NODE_ENV=production webpack -p modules/index.js umd/expect.min.js",
     "test": "jshint . && mocha --reporter spec 'modules/**/__tests__/*-test.js'",
     "test-browser": "karma start"
   },
