--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "devDependencies": {
     "babel": "^5.4.7",
     "babel-core": "^5.4.7",
+    "babel-eslint": "^4.1.1",
     "babel-loader": "^5.3.2",
-    "jshint": "^2.5.10",
+    "eslint": "^1.3.1",
     "karma": "^0.12.28",
     "karma-chrome-launcher": "^0.1.7",
     "karma-cli": "0.0.4",
@@ -26,8 +27,8 @@
     "build": "babel ./modules -d lib --ignore '__tests__'",
     "build-umd": "NODE_ENV=production webpack modules/index.js umd/expect.js",
     "build-min": "NODE_ENV=production webpack -p modules/index.js umd/expect.min.js",
-    "test": "jshint . && mocha --reporter spec 'modules/**/__tests__/*-test.js'",
-    "test-browser": "karma start"
+    "test": "eslint modules && mocha --reporter spec 'modules/**/__tests__/*-test.js'",
+    "test-browser": "eslint modules && karma start"
   },
   "keywords": [
     "expect",
