--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "babel-eslint": "^4.1.1",
     "babel-loader": "^5.0.0",
     "eslint": "^1.3.1",
+    "gzip-size": "^3.0.0",
     "karma": "^0.13.3",
     "karma-chrome-launcher": "^0.2.0",
     "karma-mocha": "^0.2.0",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.0.1",
+    "pretty-bytes": "^2.0.1",
     "webpack": "^1.4.13"
   },
   "scripts": {
