--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "build-min": "NODE_ENV=production webpack -p modules/index.js umd/expect.min.js",
     "lint": "eslint modules",
     "test": "npm run lint && mocha --compilers js:babel/register --reporter spec 'modules/**/__tests__/*-test.js'",
-    "test-browser": "npm run lint && karma start"
+    "test-browser": "npm run lint && karma start",
+    "postinstall": "node npm-scripts/postinstall.js"
   },
   "keywords": [
     "expect",
