--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: node_js
-node_js:
-  - "0.12"
-  - "4"
 sudo: false
+node_js:
+- "4"
+before_script:
+- wget http://www.browserstack.com/browserstack-local/BrowserStackLocal-linux-x64.zip
+- unzip BrowserStackLocal-linux-x64.zip
+- "./BrowserStackLocal $BROWSER_STACK_ACCESS_KEY localhost,8001,0 > /dev/null &"
+- sleep 10
+branches:
+  except:
+  - latest
+  - "/^v\\d/"
