--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "eslint": "^1.3.1",
     "gzip-size": "^3.0.0",
     "karma": "^0.13.3",
+    "karma-browserstack-launcher": "^0.1.6",
     "karma-chrome-launcher": "^0.2.0",
     "karma-mocha": "^0.2.0",
+    "karma-mocha-reporter": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.0.1",
@@ -29,8 +31,7 @@
     "build-umd": "NODE_ENV=production webpack modules/index.js umd/expect.js",
     "build-min": "NODE_ENV=production webpack -p modules/index.js umd/expect.min.js",
     "lint": "eslint modules",
-    "test": "npm run lint && mocha --compilers js:babel/register --reporter spec 'modules/**/__tests__/*-test.js'",
-    "test-browser": "npm run lint && karma start",
+    "test": "npm run lint && karma start",
     "postinstall": "node ./npm-scripts/postinstall.js"
   },
   "keywords": [
