--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Write better assertions",
   "main": "lib/index",
   "dependencies": {
-    "deep-equal": "^1.0.1",
-    "is-regexp": "^1.0.0",
+    "is-equal": "^1.3.0",
+    "is-regex": "^1.0.3",
     "object-inspect": "^1.0.2"
   },
   "devDependencies": {
