--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-core": "^5.4.7",
     "babel-eslint": "^4.1.1",
     "babel-loader": "^5.0.0",
+    "babel-polyfill": "^6.3.14",
     "eslint": "^1.3.1",
     "gzip-size": "^3.0.0",
     "karma": "^0.13.3",
