Disable installing from GitHub

--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "build-umd": "NODE_ENV=production webpack modules/index.js umd/expect.js",
     "build-min": "NODE_ENV=production webpack -p modules/index.js umd/expect.min.js",
     "lint": "eslint modules",
-    "test": "npm run lint && karma start",
-    "postinstall": "node ./npm-scripts/postinstall.js"
+    "test": "npm run lint && karma start"
   },
   "keywords": [
     "expect",
