--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "object-inspect": "^1.0.2"
   },
   "devDependencies": {
-    "babel": "^5.4.7",
-    "babel-core": "^5.4.7",
-    "babel-eslint": "^4.1.1",
-    "babel-loader": "^5.0.0",
+    "babel-cli": "^6.6.5",
+    "babel-eslint": "^5.0.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
     "eslint": "^1.3.1",
     "gzip-size": "^3.0.0",
     "karma": "^0.13.3",
@@ -35,7 +35,7 @@
   },
   "scripts": {
     "build": "node ./scripts/build.js",
-    "build-cjs": "babel ./modules -d lib --stage 0 --loose all --ignore '__tests__'",
+    "build-cjs": "babel ./modules -d lib --ignore '__tests__'",
     "build-umd": "NODE_ENV=production webpack modules/index.js umd/expect.js",
     "build-min": "NODE_ENV=production webpack -p modules/index.js umd/expect.min.js",
     "lint": "eslint modules",
