--- a/.eslintrc
+++ b/.eslintrc
@@ -1,24 +1,14 @@
 {
-  "extends": "eslint:recommended",
-  "ecmaFeatures": {
-    "modules": true
-  },
-  "env": {
-    "browser": true,
-    "node": true,
-    "es6": true
-  },
+  "extends": "airbnb",
   "parser": "babel-eslint",
   "rules": {
     "array-bracket-spacing": [2, "always"],
     "comma-dangle": [2, "never"],
-    "eol-last": 2,
-    "no-multiple-empty-lines": 2,
-    "object-curly-spacing": [2, "always"],
-    "quotes": [2, "single", "avoid-escape"],
-    "semi": [2, "never"],
-    "strict": 0,
-    "space-before-blocks": [2, "always"],
-    "space-before-function-paren": [2, {"anonymous":"always","named":"never"}]
+    "curly": 0,
+    "eqeqeq": [2, "smart"],
+    "no-param-reassign": 0,
+    "one-var": 0,
+    "one-var-declaration-per-line": 0,
+    "semi": [2, "never"]
   }
 }
