--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
-    "eslint": "^1.3.1",
+    "eslint": "2.2.0",
+    "eslint-config-airbnb": "^6.1.0",
+    "eslint-plugin-react": "^4.2.1",
     "gzip-size": "^3.0.0",
     "karma": "^0.13.3",
     "karma-browserstack-launcher": "^0.1.6",
