--- a/package.json
+++ b/package.json
@@ -54,5 +54,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/mjackson/expect.git"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
