--- a/package.json
+++ b/package.json
@@ -29,21 +29,21 @@
     "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
-    "eslint": "2.2.0",
-    "eslint-config-airbnb": "^6.1.0",
-    "eslint-plugin-react": "^4.2.1",
+    "eslint": "^2.4.0",
+    "eslint-config-airbnb": "^6.2.0",
+    "eslint-plugin-react": "^4.2.3",
     "gzip-size": "^3.0.0",
-    "karma": "^0.13.3",
-    "karma-browserstack-launcher": "^0.1.6",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma-mocha": "^0.2.0",
-    "karma-mocha-reporter": "^1.0.4",
-    "karma-sourcemap-loader": "^0.3.5",
+    "karma": "^0.13.22",
+    "karma-browserstack-launcher": "^0.1.10",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-mocha": "^0.2.2",
+    "karma-mocha-reporter": "^2.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
-    "mocha": "^2.0.1",
-    "pretty-bytes": "^2.0.1",
+    "mocha": "^2.4.5",
+    "pretty-bytes": "^3.0.1",
     "readline-sync": "^1.4.1",
-    "webpack": "^1.4.13"
+    "webpack": "^1.12.14"
   },
   "keywords": [
     "expect",
