--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "is-equal": "^1.5.1",
     "is-regex": "^1.0.3",
-    "object-inspect": "^1.1.0"
+    "object-inspect": "^1.1.0",
+    "object-keys": "^1.0.9"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
