--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
+    "has": "^1.0.1",
     "is-equal": "^1.5.1",
     "is-regex": "^1.0.3",
     "object-inspect": "^1.1.0"
