Remove previous build output before building

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "build": "node ./scripts/build.js",
-    "build-cjs": "babel ./modules -d lib --ignore '__tests__'",
+    "build-cjs": "rimraf lib && babel ./modules -d lib --ignore '__tests__'",
     "build-umd": "NODE_ENV=production webpack modules/index.js umd/expect.js",
     "build-min": "NODE_ENV=production webpack -p modules/index.js umd/expect.min.js",
     "lint": "eslint modules",
@@ -46,6 +46,7 @@
     "mocha": "^2.4.5",
     "pretty-bytes": "^3.0.1",
     "readline-sync": "^1.4.1",
+    "rimraf": "^2.5.2",
     "webpack": "^1.12.14"
   },
   "keywords": [
