--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "babel-preset-es2015": "^6.6.0",
     "eslint": "^2.5.1",
     "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.7.0",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.1.1",
     "gzip-size": "^3.0.0",
     "karma": "^0.13.22",
