--- a/.eslintrc
+++ b/.eslintrc
@@ -6,8 +6,10 @@
     "curly": 0,
     "eqeqeq": [1, "smart"],
     "no-param-reassign": 0,
+    "no-restricted-syntax": 0,
     "one-var": 0,
     "one-var-declaration-per-line": 0,
-    "semi": [2, "never"]
+    "semi": [2, "never"],
+    "spaced-comment": 0
   }
 }
