--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   ],
   "scripts": {
     "build": "node ./scripts/build.js",
-    "build-cjs": "rimraf lib && babel ./modules -d lib --ignore '__tests__'",
-    "build-umd": "NODE_ENV=production webpack modules/index.js umd/expect.js",
-    "build-min": "NODE_ENV=production webpack -p modules/index.js umd/expect.min.js",
+    "build-lib": "rimraf lib && babel ./modules -d lib --ignore '__tests__'",
+    "build-umd": "webpack modules/index.js umd/expect.js",
+    "build-min": "webpack -p modules/index.js umd/expect.min.js",
     "lint": "eslint modules",
     "test": "npm run lint && karma start",
     "release": "node ./scripts/release.js",
-    "prepublish": "npm run build"
+    "prepublish": "node ./scripts/build.js"
   },
   "dependencies": {
     "define-properties": "~1.1.2",
@@ -39,6 +39,7 @@
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.1.1",
     "gzip-size": "^3.0.0",
+    "in-publish": "^2.0.0",
     "karma": "^0.13.22",
     "karma-browserstack-launcher": "^1.0.0",
     "karma-chrome-launcher": "^1.0.1",
