--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "build": "node ./scripts/build.js",
     "build-lib": "rimraf lib && babel ./modules -d lib --ignore '__tests__'",
-    "build-umd": "webpack modules/index.js umd/expect.js",
-    "build-min": "webpack -p modules/index.js umd/expect.min.js",
+    "build-umd": "rollup -c",
+    "build-min": "rollup -c --environment PRODUCTION && uglifyjs umd/expect.js -cm > umd/expect.min.js",
     "lint": "eslint modules",
     "test": "npm run lint && karma start",
     "release": "node ./scripts/release.js",
@@ -49,6 +49,11 @@
     "pretty-bytes": "^3.0.1",
     "readline-sync": "^1.4.1",
     "rimraf": "^2.5.2",
+    "rollup-plugin-buble": "^0.13.0",
+    "rollup-plugin-commonjs": "^3.3.1",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-replace": "^1.1.1",
+    "uglifyjs": "^2.4.10",
     "webpack": "^1.12.14"
   },
   "keywords": [
