--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "eslint": "^3.2.2",
     "eslint-plugin-import": "^1.12.0",
@@ -53,8 +52,7 @@
     "rollup-plugin-commonjs": "^3.3.1",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-replace": "^1.1.1",
-    "uglifyjs": "^2.4.10",
-    "webpack": "^1.12.14"
+    "uglifyjs": "^2.4.10"
   },
   "keywords": [
     "expect",
