--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "pretty-bytes": "^3.0.1",
     "readline-sync": "^1.4.1",
     "rimraf": "^2.5.2",
+    "rollup": "^0.34.10",
     "rollup-plugin-buble": "^0.13.0",
     "rollup-plugin-commonjs": "^3.3.1",
     "rollup-plugin-node-resolve": "^2.0.0",
