--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "readline-sync": "^1.4.1",
     "rimraf": "^2.5.2",
     "rollup": "^0.34.10",
-    "rollup-plugin-buble": "^0.13.0",
+    "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-commonjs": "^3.3.1",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-replace": "^1.1.1",
