--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "build-min": "webpack -p modules/index.js umd/expect.min.js",
     "lint": "eslint modules",
     "pretest": "npm run lint",
-    "test": "karma start",
+    "test": "npm run jest",
+    "jest": "jest",
+    "posttest": "npm run karma",
+    "karma": "karma start",
     "release": "node ./scripts/release.js",
     "prepublish": "safe-publish-latest && npm run build"
   },
@@ -34,12 +37,14 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^7.2.3",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.11.0",
     "eslint-plugin-import": "^2.8.0",
     "gzip-size": "^3.0.0",
     "in-publish": "^2.0.0",
+    "jest": "^21.2.1",
     "karma": "^1.7.1",
     "karma-browserstack-launcher": "^1.3.0",
     "karma-chrome-launcher": "^2.2.0",
