[Tests] update travis-ci config

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build-min": "webpack -p modules/index.js umd/expect.min.js",
     "lint": "eslint modules",
     "pretest": "npm run lint",
-    "test": "npm run jest",
+    "test": "npm run tests-only",
+    "tests-only": "npm run jest",
     "jest": "jest",
     "posttest": "npm run karma",
     "karma": "karma start",
